<resources>
    <string name="app_name">Currency converter</string>
    <string name="calculator">Calculator</string>
    <string name="settings">Settings</string>
    <string name="choose_currency">Choose a currency</string>
    <string name="nominal_code" translatable="false">%1$d %2$s</string>
    <string name="ruble_hint" translatable="false">RUB</string>
    <string name="val_hint" translatable="false">VAL</string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="error_timeout">Server response timeout</string>
    <string name="error_app">App internal error</string>
    <string name="error_session">Current session is expired</string>
    <string name="error_internal_server">Internal server error</string>
    <string name="rub" translatable="false">RUB</string>
    <string name="retry">Retry</string>
    <string name="theme_system">Theme settings</string>
    <string name="add_to_favs">Add to favorites</string>
    <string name="from_to">%1$s to %2$s</string>
    <string name="theme_as_in_system">System\'s theme</string>
    <string name="api_source">API source</string>
    <string name="exchange_rates_api">Exchange Rates API</string>
    <string name="cbrf_api">Central Bank of Russia</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>

    <!-- Имена валют -->
    <string name="aed_name">United Arab Emirates Dirham</string>
    <string name="afn_name">Afghan Afghani</string>
    <string name="all_name">Albanian Lek</string>
    <string name="amd_name">Armenian Dram</string>
    <string name="ang_name">Netherlands Antillean Guilder</string>
    <string name="aoa_name">Angolan Kwanza</string>
    <string name="ars_name">Argentine Peso</string>
    <string name="aud_name">Australian Dollar</string>
    <string name="awg_name">Aruban Florin</string>
    <string name="azn_name">Azerbaijani Manat</string>
    <string name="bam_name">Bosnia-Herzegovina Convertible Mark</string>
    <string name="bbd_name">Barbadian Dollar</string>
    <string name="bdt_name">Bangladeshi Taka</string>
    <string name="bgn_name">Bulgarian Lev</string>
    <string name="bhd_name">Bahraini Dinar</string>
    <string name="bif_name">Burundian Franc</string>
    <string name="bmd_name">Bermudian Dollar</string>
    <string name="bnd_name">Brunei Dollar</string>
    <string name="bob_name">Bolivian Boliviano</string>
    <string name="brl_name">Brazilian Real</string>
    <string name="bsd_name">Bahamian Dollar</string>
    <string name="btc_name">Bitcoin</string>
    <string name="btn_name">Bhutanese Ngultrum</string>
    <string name="bwp_name">Botswanan Pula</string>
    <string name="byn_name">Belarusian Ruble</string>
    <string name="byr_name">Belarusian Ruble (pre-2016)</string>
    <string name="bzd_name">Belize Dollar</string>
    <string name="cad_name">Canadian Dollar</string>
    <string name="cdf_name">Congolese Franc</string>
    <string name="chf_name">Swiss Franc</string>
    <string name="clf_name">Chilean Unit of Account (UF)</string>
    <string name="clp_name">Chilean Peso</string>
    <string name="cny_name">Chinese Yuan</string>
    <string name="cop_name">Colombian Peso</string>
    <string name="crc_name">Costa Rican Colón</string>
    <string name="cuc_name">Cuban Convertible Peso</string>
    <string name="cup_name">Cuban Peso</string>
    <string name="cve_name">Cape Verdean Escudo</string>
    <string name="czk_name">Czech Republic Koruna</string>
    <string name="djf_name">Djiboutian Franc</string>
    <string name="dkk_name">Danish Krone</string>
    <string name="dop_name">Dominican Peso</string>
    <string name="dzd_name">Algerian Dinar</string>
    <string name="egp_name">Egyptian Pound</string>
    <string name="ern_name">Eritrean Nakfa</string>
    <string name="etb_name">Ethiopian Birr</string>
    <string name="eur_name">Euro</string>
    <string name="fjd_name">Fijian Dollar</string>
    <string name="fkp_name">Falkland Islands Pound</string>
    <string name="fok_name">Faroese króna</string>
    <string name="gbp_name">British Pound Sterling</string>
    <string name="gel_name">Georgian Lari</string>
    <string name="ggp_name">Guernsey Pound</string>
    <string name="ghs_name">Ghanaian Cedi</string>
    <string name="gip_name">Gibraltar Pound</string>
    <string name="gmd_name">Gambian Dalasi</string>
    <string name="gnf_name">Guinean Franc</string>
    <string name="gtq_name">Guatemalan Quetzal</string>
    <string name="gyd_name">Guyanaese Dollar</string>
    <string name="hkd_name">Hong Kong Dollar</string>
    <string name="hnl_name">Honduran Lempira</string>
    <string name="hrk_name">Croatian Kuna</string>
    <string name="htg_name">Haitian Gourde</string>
    <string name="huf_name">Hungarian Forint</string>
    <string name="idr_name">Indonesian Rupiah</string>
    <string name="ils_name">Israeli New Shekel</string>
    <string name="imp_name">Isle of Man Pound</string>
    <string name="inr_name">Indian Rupee</string>
    <string name="iqd_name">Iraqi Dinar</string>
    <string name="irr_name">Iranian Rial</string>
    <string name="isk_name">Icelandic Króna</string>
    <string name="jep_name">Jersey Pound</string>
    <string name="jmd_name">Jamaican Dollar</string>
    <string name="jod_name">Jordanian Dinar</string>
    <string name="jpy_name">Japanese Yen</string>
    <string name="kes_name">Kenyan Shilling</string>
    <string name="kgs_name">Kyrgystani Som</string>
    <string name="khr_name">Cambodian Riel</string>
    <string name="kmf_name">Comorian Franc</string>
    <string name="kpw_name">North Korean Won</string>
    <string name="krw_name">South Korean Won</string>
    <string name="kwd_name">Kuwaiti Dinar</string>
    <string name="kyd_name">Cayman Islands Dollar</string>
    <string name="kzt_name">Kazakhstani Tenge</string>
    <string name="lak_name">Laotian Kip</string>
    <string name="lbp_name">Lebanese Pound</string>
    <string name="lkr_name">Sri Lankan Rupee</string>
    <string name="lrd_name">Liberian Dollar</string>
    <string name="lsl_name">Lesotho Loti</string>
    <string name="ltl_name">Lithuanian Litas</string>
    <string name="lvl_name">Latvian Lats</string>
    <string name="lyd_name">Libyan Dinar</string>
    <string name="mad_name">Moroccan Dirham</string>
    <string name="mdl_name">Moldovan Leu</string>
    <string name="mga_name">Malagasy Ariary</string>
    <string name="mkd_name">Macedonian Denar</string>
    <string name="mmk_name">Myanma Kyat</string>
    <string name="mnt_name">Mongolian Tugrik</string>
    <string name="mop_name">Macanese Pataca</string>
    <string name="mro_name">Mauritanian Ouguiya</string>
    <string name="mur_name">Mauritian Rupee</string>
    <string name="mvr_name">Maldivian Rufiyaa</string>
    <string name="mwk_name">Malawian Kwacha</string>
    <string name="mxn_name">Mexican Peso</string>
    <string name="myr_name">Malaysian Ringgit</string>
    <string name="mzn_name">Mozambican Metical</string>
    <string name="nad_name">Namibian Dollar</string>
    <string name="ngn_name">Nigerian Naira</string>
    <string name="nio_name">Nicaraguan Córdoba</string>
    <string name="nok_name">Norwegian Krone</string>
    <string name="npr_name">Nepalese Rupee</string>
    <string name="nzd_name">New Zealand Dollar</string>
    <string name="omr_name">Omani Rial</string>
    <string name="pab_name">Panamanian Balboa</string>
    <string name="pen_name">Peruvian Nuevo Sol</string>
    <string name="pgk_name">Papua New Guinean Kina</string>
    <string name="php_name">Philippine Peso</string>
    <string name="pkr_name">Pakistani Rupee</string>
    <string name="pln_name">Polish Złoty</string>
    <string name="pyg_name">Paraguayan Guarani</string>
    <string name="qar_name">Qatari Rial</string>
    <string name="ron_name">Romanian Leu</string>
    <string name="rsd_name">Serbian Dinar</string>
    <string name="rub_name">Russian Ruble</string>
    <string name="rwf_name">Rwandan Franc</string>
    <string name="sar_name">Saudi Riyal</string>
    <string name="sbd_name">Solomon Islands Dollar</string>
    <string name="scr_name">Seychellois Rupee</string>
    <string name="sdg_name">Sudanese Pound</string>
    <string name="sek_name">Swedish Krona</string>
    <string name="sgd_name">Singapore Dollar</string>
    <string name="shp_name">Saint Helena Pound</string>
    <string name="sle_name">Sierra Leonean Leone</string>
    <string name="sll_name">Sierra Leonean Leone (pre-2017)</string>
    <string name="sos_name">Somali Shilling</string>
    <string name="srd_name">Surinamese Dollar</string>
    <string name="std_name">São Tomé and Príncipe Dobra</string>
    <string name="syp_name">Syrian Pound</string>
    <string name="szl_name">Swazi Lilangeni</string>
    <string name="thb_name">Thai Baht</string>
    <string name="tjs_name">Tajikistani Somoni</string>
    <string name="tmt_name">Turkmenistani Manat</string>
    <string name="tnd_name">Tunisian Dinar</string>
    <string name="top_name">Tongan Pa\'anga</string>
    <string name="try_name">Turkish Lira</string>
    <string name="ttd_name">Trinidad and Tobago Dollar</string>
    <string name="twd_name">New Taiwan Dollar</string>
    <string name="tzs_name">Tanzanian Shilling</string>
    <string name="uah_name">Ukrainian Hryvnia</string>
    <string name="ugx_name">Ugandan Shilling</string>
    <string name="usd_name">United States Dollar</string>
    <string name="uyu_name">Uruguayan Peso</string>
    <string name="uzs_name">Uzbekistan Som</string>
    <string name="vef_name">Venezuelan Bolívar</string>
    <string name="ves_name">Venezuelan Bolívar (pre-2018)</string>
    <string name="vnd_name">Vietnamese Dong</string>
    <string name="vuv_name">Vanuatu Vatu</string>
    <string name="wst_name">Samoan Tala</string>
    <string name="xaf_name">Central African CFA Franc</string>
    <string name="xag_name">Silver Ounce</string>
    <string name="xau_name">Gold Ounce</string>
    <string name="xcd_name">East Caribbean Dollar</string>
    <string name="xdr_name">International Monetary Fund (IMF) Special Drawing Rights</string>
    <string name="xof_name">West African CFA Franc</string>
    <string name="xpf_name">CFP Franc</string>
    <string name="yer_name">Yemeni Rial</string>
    <string name="zar_name">South African Rand</string>
    <string name="zmk_name">Zambian Kwacha</string>
    <string name="zmw_name">Zambian Kwacha (pre-2013)</string>
    <string name="zwl_name">Zimbabwean Dollar</string>
    <string name="unk_name">Unknown currency</string>
    <string name="kid_name">Kiribati Dollar</string>
    <string name="mru_name">Mauritanian Ouguiya</string>
    <string name="ssp_name">South Sudanese Pound</string>
    <string name="stn_name">São Tomé and Príncipe Dobra</string>
    <string name="tvd_name">Tuvaluan Dollar</string>
    <string name="favorite_currencies">Избранные валютные пары</string>
    <string name="remove_from_favs">Remove from favorites</string>

</resources>